--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-md navbar-expand-sm navbar-light bg-white">
+    <nav class="navbar navbar-expand-md navbar-expand-sm navbar-light " style="background:#7f7f7f29">
         <!-- Brand -->
         <a class="navbar-brand" href="#">Giày Faker</a>
 
