--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     this.responseText;
             }
         };
-        xmlhttp.open("GET", "database/product.xml", true);
+        xmlhttp.open("GET", URL, true);
         xmlhttp.send();
     }
 </script>
