--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
     function create_col_product_HTML(hang, name, mony, file_image, loai) {
 
         var mony = formatNumber(mony, '.', ',');
-        loai = loai == "giay" ? "Giay/" : "Dep/";
-        var src = "images/" + loai + hang + "/" + file_image;
+
+        var src = "images/" + loai + "/" + hang + "/" + file_image;
         var html = '<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 "><div class="card"> <img class = "card-img-top" src="' + src + '"   alt = "Card image"style = "width:100%" > <div class = "card-body" > <h4 class = "card-title adidas-name" > ' + name + ' </h4> <p class = "card-text"> Giá: <span class = "adidas-mony"> ' + mony + ' </span> <sup> đ </sup> </p> <a href = "#"class = "btn btn-primary"> See Profile </a> </div> </div> </div> ';
         $(".row#" + hang).append(html);
     }
