--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
     <a id="button" onclick="topFunction()"></a>
 
-    <footer style="background: #343a40; color:white;">
+    <footer style="background: #343a40; color:white;" id="Aboutus">
         <div class=" footer " style="margin:2px 0 0 0;  ">
             <h1 style="padding:0.5em 0 0 0.5em ; "> About Us</h1>
             <div class="container-fluid ">
