--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" ref="stylesheet">
-    <title>Giày Faker</title>
+    <title>Giày Fake</title>
     <!--Bootstrap-->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -137,7 +137,7 @@
 
     <nav class=" navbar navbar-expand-md bg-dark navbar-dark  fixed-top " style="background:white">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Giày Faker</a>
+        <a class="navbar-brand" href="#">Giày Fake</a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
