--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" ref="stylesheet">
-    <title>Giày Fake</title>
+    <title>DoDiFaker</title>
     <!--Bootstrap-->
-
+    <link rel="shortcut icon" type="image/png" href="images/Icon/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
+
 
     <style>
         .navbar-light .navbar-nav .nav-link {
@@ -33,7 +34,7 @@
         @media (min-width: 1000px) {
             li.nav-item>a {
                 font-weight: bolder;
-                font-size: 1.2em;
+                font-size: 1.5em;
             }
             ul.navbar-nav.nav-1>li {
                 padding-right: 7em;
@@ -137,7 +138,14 @@
 
     <nav class=" navbar navbar-expand-md bg-dark navbar-dark  fixed-top " style="background:white">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Giày Fake</a>
+        <a class="navbar-brand" href="#">
+            <div style="width:100px; height:70px;">
+                <image src="images/Icon/logo1.png" width="100%" height="100%" />
+                <!--Ghi Tên Ơ Day-->
+                <span>DoDiFaker</span>
+            </div>
+
+        </a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
