--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         @media (min-width: 1000px) {
             li.nav-item>a {
                 font-weight: bolder;
-                font-size: 1.5em;
+                font-size: 1.3em;
             }
             ul.navbar-nav.nav-1>li {
                 padding-right: 7em;
@@ -129,6 +129,13 @@
                 margin: 30px;
             }
         }
+        
+        a.navbar-brand {
+            width: 111px;
+            height: 80px;
+            padding: 0;
+            margin: 0;
+        }
     </style>
 
 
@@ -138,13 +145,10 @@
 
     <nav class=" navbar navbar-expand-md bg-dark navbar-dark  fixed-top " style="background:white">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">
-            <div style="width:100px; height:70px;">
-                <image src="images/Icon/logo1.png" width="100%" height="100%" />
-                <!--Ghi Tên Ơ Day-->
-                <span>DoDiFaker</span>
-            </div>
-
+        <a class="navbar-brand" href="index.html">
+            <image src="images/Icon/logo1.png" width="100%" height="100%" />
+            <!--Ghi Tên Ơ Day-->
+            <span></span>
         </a>
 
         <!-- Toggler/collapsibe Button -->
