--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" ref="stylesheet">
-    <title>DoDiFaker</title>
+    <title>ĐoĐiFaker</title>
     <!--Bootstrap-->
     <link rel="shortcut icon" type="image/png" href="images/Icon/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -335,26 +335,35 @@
     <a id="button" onclick="topFunction()"></a>
 
     <footer style="background: #343a40; color:white;" id="Aboutus">
+
         <div class=" footer " style="margin:2px 0 0 0;  ">
-            <h1 style="padding:0.5em 0 0 0.5em ; "> About Us</h1>
+
+            <h1 style="padding:0.5em 0 0 0.5em ; "> ĐoĐiFaker</h1>
+
+
+            <h6 style="padding: 0.5em 0 0 1.5em;">About us</h6>
             <div class="container-fluid ">
                 <div class="row ">
-                    <div class="col-sm-6 col-xl-4 " style=" text-align: center">
-                        <h5 style="margin:11px 0; ">Email: <a class=" btn-link " href="mailto: dovietding123@gmail.com ">dovietding123@gmail.com</a> </h5>
-                        <h5 style="margin:11px 0;">SĐT: <a class=" bnt-link " href=" tel:0927010872 ">0927010872</a></h5>
+                    <div class="col-sm-6 col-xl-6 " style="padding-left:4em">
+                        <p>Email: <a class=" btn-link " href="mailto: dovietding123@gmail.com ">dovietding123@gmail.com</a> </p>
+                        <p>SĐT: <a class=" bnt-link " href=" tel:0927010872 ">0927010872</a></p>
                     </div>
-                    <div class="col-sm-6 col-xl-8 " style=" text-align: center; ">
-                        <h5 style="margin:11px 0; "><a class=" btn-link " href="https://www.facebook.com/DinhDo0911 "><i class="fab fa-facebook "></i> Facebook</a> </h5>
-                        <h5><a class="bnt-link " href="https://m.me/DinhDo0911 "><i class="fab fa-facebook-messenger "></i> Messenger</a></h5>
+
+                    <div class="col-sm-6 col-xl-3 ">
+                        <p><a class=" btn-link " href="https://www.facebook.com/DinhDo0911 "><i class="fab fa-facebook "></i> Facebook</a> </p>
+                        <p><a class="bnt-link " href="https://m.me/DinhDo0911 "><i class="fab fa-facebook-messenger "></i> Messenger</a></p>
+                    </div>
+                    <div class="col-sm-2 col-xl-3 ">
+                        <div style="width:200px;height:200px;margin-top: -23px;">
+                            <image src="images/Icon/logo1.png" width="100%" height="100%" />
+                        </div>
                     </div>
                 </div>
-
-
-
             </div>
 
         </div>
-        <p id="date" style="margin:3px 0 0 0; padding-bottom: 14px; text-align: center; color:#868181; "></p>
+        <p id="date" style="margin:3px 0 0 0; padding-bottom: 14px; text-align: center; color:#868181; font-size: 0.7em ;"></p>
+
     </footer>
 
 </body>
