--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <nav class=" navbar navbar-expand-md bg-dark navbar-dark  fixed-top " style="background:white">
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="https://dovietdinh.github.io/DoDiFaker/">
             <image src="images/Icon/logo1.png" width="100%" height="100%" />
             <!--Ghi Tên Ơ Day-->
             <span></span>
