--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             <div class="container-fluid ">
                 <div class="row ">
                     <div class="col-sm-5 col-md-4 col-xl-4 " style="padding-left:4em">
-                        <p>Email: <a class=" btn-link " href="mailto: dovietding123@gmail.com ">dovietding123@gmail.com</a> </p>
+                        <p>Email: <a class=" btn-link " href="mailto: dovietdinh123@gmail.com ">dovietdinh123@gmail.com</a> </p>
                         <p>SĐT: <a class=" bnt-link " href=" tel:0927010872 ">0927010872</a></p>
                     </div>
 
